# Note: keep this file in wiki format for easy pasting to the proto-ch wiki

= GENI Clearinghouse and Portal Release Notes =

== 2.3 ==
   * Remove note feature from projects and slices (#728)
   * Add LabWiki buttons (#825)
   * Add WiMAX OpenID support (#809)
   * Clean up OpenID logging and sessions (#670)
   * Pass slice and project info via OpenID attribute exchange (#813)
   * Fix geni-remove-from-project script (#715)
   * Fix creation/deletion timestamps in monitoring (#817)
   * Fix up link selection when printing rspec (#818)
   * Alphabetize member lists for project and slice (#811)
   * Show one big "Login" box for exogeni consistent with instageni (#823)
   * Add instructions for naming on create slice page (#821)
   * Renew a slice for the end of the day (#796)

== 2.2 ==
  * Display fingerprints of SSH keys (#695)
  * Added version information to GENI portal (#789)
  * Comment out call to error log in MA causing PHP warning (#790)
  * Change some mail links to help@geni.net (#572)
  * Find owning aggregate using sliver_id for manifest (#712)
  * Project admins are made admins of newly created slices (#559)
  * Email experimenters when they request to be a project lead (#760)
  * Use code format for sample .irodsEnv file (#744)
  * Be more careful checking XML when printing RSpec (#791)
  * Put a refresh button the sliver status page (#451)
  * Show something for ExoGENI hostnames in details page (#767)
  * Remove 2 more uses of slice-member.php (#328)
  * Clean up temp files (#383)
  * Fix company name in copyright on footer (#793)
  * Password hash in account requests is quoted more succinctly (#795)
  * Fix "already a member" message to include member and project names instead of id numbers (#617)
  * Check if slice is expired before querying for status (#675)
  * Alphabetize slices in slice list (#788)
  * Comment out a debug (#798)
  * Log if the pretty RSpec printer is skipping a node as not for this AM (#803)